tests/extensions/ternary_ops/semanticErr/notACond.wacc
# int =/= bool

# Output:
#

# Exit:
# 200

begin
    int i = 4;
    println i ? "even" : "odd"
end